# EgoModelKit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/egomodelkit/: __init__.py  bandini_metrics.py  cli.py  gui.py  gui_backend.py  output_contract.py  progress.py
src/egomodelkit/models/: adl_recognition.py  hand_interaction.py  hand_object_contact.py
src/egomodelkit/resources/containers/adl_recognition/: Dockerfile  entrypoint.py  predict_adl.py
src/egomodelkit/resources/containers/adl_recognition/detic/: Dockerfile  patch_egovizml_run_detic.py
src/egomodelkit/resources/containers/hand_interaction/: Dockerfile  entrypoint.py
src/egomodelkit/resources/containers/hand_object_contact/: Dockerfile  entrypoint.py
src/egomodelkit/runtime/: adl_recognition.py  commands.py  docker_images.py  external_code.py  hand_interaction.py  hand_object_contact.py  host_platform.py  preflight.py
src/egomodelkit/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/egomodelkit/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
src/egomodelkit/web/src/test/: setup.ts
tests/: conftest.py
tests/integration/: test_cli_smoke.py  test_run_cli.py
tests/unit/: test_adl_prediction_outputs.py  test_adl_recognition_request.py  test_adl_recognition_runtime.py  test_backend_edge_coverage.py  test_bandini_metrics.py  test_commands.py  test_external_code.py  test_gui.py  test_gui_backend.py  test_hand_interaction_output_contract.py  test_hand_interaction_request.py  test_hand_interaction_runtime.py  test_hand_object_contact_request.py  test_hand_object_contact_runtime.py  test_output_contract.py  test_progress.py  test_runtime_docker_images.py  test_runtime_preflight.py
