[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egomodelkit"
version = "0.1.0"
description = "Reproducible and extensible egocentric-video model packaging."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Adaptive Neurorehabilitation Systems Lab"}]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "platformdirs>=4.2"
]

[project.optional-dependencies]
gui = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "python-multipart>=0.0.9,<1",
]

dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
    "httpx>=0.27,<1"
]

[project.scripts]
egomodelkit = "egomodelkit.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
egomodelkit = [
    "resources/*.yaml",
    "resources/*.json",
    "resources/containers/hand_object_contact/*",
    "resources/containers/hand_object_contact/**/*",
    "resources/containers/adl_recognition/*",
    "resources/containers/adl_recognition/**/*",
    "web/dist/*",
    "web/dist/assets/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "gpu: requires Linux NVIDIA GPU, Docker GPU runtime, approved weights, and a demo input"
]

[tool.coverage.run]
branch = true
source = ["egomodelkit"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
